--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -66,37 +66,22 @@
 
     <!-- Footer
 ================================================== -->
-<footer class="bs-docs-footer" role="contentinfo">
+<footer class="bs-docs-footer" role="contentinfo" id="footer">
   <div class="container">
-    <div class="bs-docs-social">
-  <ul class="bs-docs-social-buttons">
-    <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twbs&amp;repo=bootstrap&amp;type=watch&amp;count=true" width="100" height="20" title="Star on GitHub"></iframe>
-    </li>
-    <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twbs&amp;repo=bootstrap&amp;type=fork&amp;count=true" width="102" height="20" title="Fork on GitHub"></iframe>
-    </li>
-    <li class="follow-btn">
-      <a href="https://twitter.com/twbootstrap" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @twbootstrap</a>
-    </li>
-    <li class="tweet-btn">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://getbootstrap.com/" data-count="horizontal" data-via="twbootstrap" data-related="mdo:Creator of Bootstrap">Tweet</a>
-    </li>
-  </ul>
-</div>
 
-
-    <p>By <a href="http://github.com/miserlou" target="_blank">@miserlou</a> and <a href="http://twitter.com/onlyinamerica" target="_blank">@onlyinamerica</a>.</p>
+    <p><b>Glance</b> is a news network for discerning speed readers.</p> <br />
+    <p>Website by <a href="http://github.com/miserlou" target="_blank">Rich Jones</a> of <a href="https://gun.io">Gun.io</a>. </p>
+    <p>Also available as an <a href="https://play.google.com/store/apps/details?id=pro.dbro.openspritz&hl=en">Android app</a>!<br /><br />
     <p>Maintained by the <a href="https://github.com/glance?tab=members">core team</a> with the help of <a href="https://github.com/glance/glanceweb/graphs/contributors">our contributors</a>.</p>
-    <p>Code licensed under <a href="http://github.com/miserlo" target="_blank">MIT</a>.</p>
+    <p>Code licensed under <a href="http://github.com/miserlou" target="_blank">MIT</a>.</p>
     <ul class="bs-docs-footer-links muted">
-      <li>Currently v0.0.0</li>
+      <li>Currently v0.1.0</li>
       <li>&middot;</li>
-      <li><a href="https://github.com/glance/glanceweb">GitHub</a></li>
+      <li><a href="https://github.com/Miserlou/Glanceweb">GitHub</a></li>
       <li>&middot;</li>
-      <li><a href="/about/">About</a></li>
+      <li><a href="http://github.com/Miserlou/Glanceweb">About</a></li>
       <li>&middot;</li>
-      <li><a href="http://expo.getbootstrap.com">Contact</a></li>
+      <li><a href="mailto: rich@gun.io">Contact</a></li>
       <li>&middot;</li>
       <li><a href="http://gun.io/">Gun.io</a></li>
     </ul>
@@ -126,14 +111,6 @@
   {% endcompress %}
   <!-- end scripts -->
 
-  <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
-       mathiasbynens.be/notes/async-analytics-snippet -->
-  <script>
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script>
 {% endblock %}
 
 {% block post_scripts %}
