--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -70,16 +70,16 @@
   <div class="container">
 
     <p><b>Glance</b> is a news network for discerning speed readers.</p> <br />
-    <p>Website by <a href="http://github.com/miserlou" target="_blank">Rich Jones</a> of <a href="https://gun.io">Gun.io</a>. </p>
+    <p>Website by <a href="http://github.com/Miserlou" target="_blank">Rich Jones</a> of <a href="https://gun.io">Gun.io</a>. </p>
     <p>Also available as an <a href="https://play.google.com/store/apps/details?id=pro.dbro.openspritz&hl=en">Android app</a>!<br /><br />
-    <p>Maintained by the <a href="https://github.com/glance?tab=members">core team</a> with the help of <a href="https://github.com/glance/glanceweb/graphs/contributors">our contributors</a>.</p>
-    <p>Code licensed under <a href="http://github.com/miserlou" target="_blank">MIT</a>.</p>
+    <p>This project is open source - please become <a href="https://github.com/Miserlou/Glance">a contributor</a>!</p>
+    <p>Code licensed under <a href="http://github.com/Miserlou" target="_blank">BSD</a>.</p>
     <ul class="bs-docs-footer-links muted">
       <li>Currently v0.1.0</li>
       <li>&middot;</li>
-      <li><a href="https://github.com/Miserlou/Glanceweb">GitHub</a></li>
+      <li><a href="https://github.com/Miserlou/Glance">GitHub</a></li>
       <li>&middot;</li>
-      <li><a href="http://github.com/Miserlou/Glanceweb">About</a></li>
+      <li><a href="http://github.com/Miserlou/Glance">About</a></li>
       <li>&middot;</li>
       <li><a href="mailto: rich@gun.io">Contact</a></li>
       <li>&middot;</li>
