some fixes, favicon

--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -9,6 +9,8 @@
 <head>
   <meta charset="utf-8">
 
+  <link rel="shortcut icon" href="/static/img/favicon.ico" />
+
   <!-- Use the .htaccess and remove these lines to avoid edge case issues.
        More info: h5bp.com/i/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -70,8 +72,18 @@
   <div class="container">
 
     <p><b>Glance</b> is a news network for discerning speed readers.</p> <br />
-    <p>Website by <a href="http://github.com/Miserlou" target="_blank">Rich Jones</a> of <a href="https://gun.io">Gun.io</a>. </p>
-    <p>Also available as an <a href="https://play.google.com/store/apps/details?id=pro.dbro.openspritz&hl=en">Android app</a>!<br /><br />
+    <p>Website by <a href="http://github.com/Miserlou" target="_blank">Rich Jones</a> of <a href="https://gun.io">Gun.io</a>. <br /><br /></p>
+
+
+    <p>
+
+    <a href="https://play.google.com/store/apps/details?id=pro.dbro.openspritz&hl=en">
+      <img alt="Glance for Android on Google Play"
+           src="/static/img/play.png" />
+    </a><br />
+    Also available as an <a href="https://play.google.com/store/apps/details?id=pro.dbro.openspritz&hl=en">Android app</a>!<br /><br />
+
+
     <p>This project is open source - please become <a href="https://github.com/Miserlou/Glance">a contributor</a>!</p>
     <p>Code licensed under <a href="http://github.com/Miserlou" target="_blank">BSD</a>.</p>
     <ul class="bs-docs-footer-links muted">
