--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -47,6 +47,7 @@ body {
   <li><a href="#js-classics">Classics</a></li>
   <li><a href="#js-hn">HN</a></li>
   <li><a href="#js-truereddit">TrueReddit</a></li>
+  <li><a href="#js-digg">Digg</a></li>
   <li><a onclick="toggleLights(); return false;">Toggle Lights</a></li>
 </ul>
 <br />
@@ -121,6 +122,14 @@ body {
 
 </div>
 
+<div class="bs-docs-section">
+  <h1 id="js-digg" class="page-header">Digg <small><i>Back from the dead!</i></small></h1>
+
+  <div id="digg">
+
+  </div>
+
+</div>
 
 </div>
 
@@ -172,6 +181,12 @@ body {
 </li>
 <li>
   <a href="#js-truereddit">TrueReddit</a>
+  <ul class="nav">
+
+  </ul>
+</li>
+<li>
+  <a href="#js-digg">Digg</a>
   <ul class="nav">
 
   </ul>
@@ -568,6 +583,7 @@ Loading..
             loadPipe("http://pipes.yahoo.com/pipes/pipe.run?_id=ee8d2db2513114660b054cd82da29b69&_render=json", "fiction");
             loadPipe("http://pipes.yahoo.com/pipes/pipe.run?_id=af38f38c0a21785ef8409d48ab4c1246&_render=json", "hn");
             loadPipe("http://pipes.yahoo.com/pipes/pipe.run?_id=792a6a5fc2c23eafe6a80855263ac259&_render=json", "truereddit");
+            loadPipe("http://pipes.yahoo.com/pipes/pipe.run?_id=8ef995083e5fe68ae3fe2d3d95f71844&_render=json", "digg");
         }
     );
 
